# ICP-Variants

./: .gitignore  ICPOptimizer.h  LICENSE  PointCloud.h  ProcrustesAligner.h  README.md  VirtualSensor.h
Data/: apartment_global.csv  apartment_local.csv  bunny_experiments.csv  bunny_part1.off  bunny_part2_trans.off  convert.py  experiment.csv
icp-variants/: .ConvergenceMeasure.h.swp  .ETHDataLoader.h.swp  .Eigen.h.swp  .ICPOptimizer.h.swp  .NearestNeighbor.h.swp  .PointCloud.h.swp  .ProcrustesAligner.h.swp  .TimeMeasure.h.swp  .VirtualSensor.h.swp  .constraints.h.swp  .experiment.cpp.swp  .main.cpp.swp  .selection.h.swp  .utils.h.swp  BunnyDataLoader.h  CMakeLists.txt  CSVReader.h  ConvergenceMeasure.h  DataLoader.h  ETHDataLoader.h  Eigen.h  ICPOptimizer.h  NearestNeighbor.h  PointCloud.h  ProcrustesAligner.h  RMSE.txt  RMSE_plane.txt  TimeMeasure.h  VirtualSensor.h  bunny_final_source.ply  bunny_icp.off  bunny_source.ply  bunny_target.ply  constraints.h  errors_statistic.py  experiment.cpp  generatePlot.py  main.cpp  selection.h  t.txt  (+2 more)
